--- a/wuziqi2/.project
+++ b/wuziqi2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wuziqi2</name>
+	<name>wuziqi</name>
 	<comment></comment>
 	<projects>
 	</projects>
