--- a/myHttpServer/pom.xml
+++ b/myHttpServer/pom.xml
@@ -3,4 +3,16 @@
   <groupId>myHttpServer</groupId>
   <artifactId>myHttpServer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>3.8.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.succez.commons</groupId>
+  		<artifactId>com.succez.commons.junit</artifactId>
+  		<version>4.8.2-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
